# this-code

./: .gitignore  CLAUDE.md  README.md  RELEASE.md  package-lock.json  package.json  prek.toml  skills-lock.json
.claude/: gsd-file-manifest.json  settings.json
.claude/agents/: gsd-ai-researcher.md  gsd-code-fixer.md  gsd-debugger.md  gsd-domain-researcher.md  gsd-eval-auditor.md  gsd-eval-planner.md  gsd-executor.md  gsd-framework-selector.md  gsd-phase-researcher.md  gsd-plan-checker.md  gsd-planner.md  gsd-research-synthesizer.md  gsd-roadmapper.md  gsd-ui-researcher.md  gsd-user-profiler.md  gsd-verifier.md
.claude/hooks/: gsd-check-update-worker.js  gsd-check-update.js  gsd-context-monitor.js  gsd-phase-boundary.sh  gsd-prompt-guard.js  gsd-read-guard.js  gsd-read-injection-scanner.js  gsd-session-state.sh  gsd-statusline.js  gsd-validate-commit.sh  gsd-workflow-guard.js
.claude/skills/: readme-blueprint-generator
.github/workflows/: ci.yml  cli-ci.yml  cli-release.yml  ext-ci.yml  ext-release.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  post-milestone-REVIEW-FIX.md  post-milestone-REVIEW.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
cli/: Cargo.toml  clippy.toml
cli/src/: cli.rs  config.rs  db.rs  install.rs  main.rs  query.rs  shim.rs  which.rs
extension/: .gitignore  .vscode-test.js  .vscodeignore  esbuild.js  package-lock.json  package.json  tsconfig.json  tsconfig.test.json
extension/src/: cliDetect.ts  config.ts  db.ts  extension.ts  (+2 more)
scripts/: setup-development.sh
(+188 files in other folders)
