[package]
name = "this-code"
version = "0.1.0"
edition = "2024"
authors = ["Shane Spencer"]
license = "MIT"
publish = false

[dependencies]
clap = { version = "4.6", features = ["derive"] }
figment = { version = "0.10", features = ["toml", "env"] }
which = "8"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2.0"
anyhow = "1.0"
rusqlite = { version = "0.39", features = ["bundled"] }
serde_json = "1.0"
directories = "6"

[dev-dependencies]
tempfile = "3"

[lints.rust]
unsafe_code = "warn"
unreachable_pub = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
